crates/strider-analyze/tests/snapshots/v2__mips32be__abi__make_pair.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nv1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "7" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "9" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "9" [label="arg[2] ← a2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "3" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "11" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "7" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "12" [label="arg[1] ← a1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
